syntax = "proto3";
package yokai_game;

option go_package = "github.com/yokaiio/yokai_server/proto/game";

import "account/account.proto";
import "game/player.proto";

///////////////////////////////////////////////////
// service
///////////////////////////////////////////////////
service GameService {
    rpc GetRemoteLiteAccount (GetRemoteLiteAccountRequest) returns (GetRemoteLiteAccountReply) {}
    rpc GetRemoteLitePlayer (GetRemoteLitePlayerRequest) returns (GetRemoteLitePlayerReply) {}
    rpc UpdatePlayerExp (UpdatePlayerExpRequest) returns (UpdatePlayerExpReply) {}
}

message GetRemoteLiteAccountRequest {
    int64 id = 1;
}

message GetRemoteLiteAccountReply {
    yokai_account.LiteAccount info = 1;
}

message GetRemoteLitePlayerRequest {
    int64 id = 1;
}

message GetRemoteLitePlayerReply {
    LitePlayer info = 1;
}

message UpdatePlayerExpRequest {
    int64 id = 1;
}

message UpdatePlayerExpReply {
    int64 id = 1;
    int64 exp = 2;
}
